--- a/COMP2084-MusicStore/Views/Shared/_Layout.cshtml
+++ b/COMP2084-MusicStore/Views/Shared/_Layout.cshtml
@@ -33,7 +33,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Songs" asp-action="Index">Songs</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Albums" asp-action="Index">Albums</a></li>
+                    <li><a asp-area="" asp-controller="Genres" asp-action="Index">Genres</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="StoreManager" asp-action="Index">Store Manager</a></li>
                 </ul>
