--- a/COMP2084-MusicStore/Views/Shared/_Layout.cshtml
+++ b/COMP2084-MusicStore/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject COMP2084_MusicStore.Controllers.ShoppingCartService scs;
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -36,7 +38,12 @@
                     <li><a asp-area="" asp-controller="Albums" asp-action="Index">Albums</a></li>
                     <li><a asp-area="" asp-controller="Genres" asp-action="Index">Genres</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="StoreManager" asp-action="Index">Store Manager</a></li>
+                    <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">Cart (@scs.GetCurrentCart().GetCartItems().Count)</a></li>
+
+                    @if (!User.Identity.IsAuthenticated)
+                    {
+                        <li><a asp-area="" asp-controller="StoreManager" asp-action="Index">Store Manager</a></li>
+                    }
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
