--- a/COMP2084-MusicStore/Views/Songs/Edit.cshtml
+++ b/COMP2084-MusicStore/Views/Songs/Edit.cshtml
@@ -15,8 +15,7 @@
             <input type="hidden" asp-for="SongId" />
             <div class="form-group">
                 <label asp-for="AlbumId" class="control-label"></label>
-                <select asp-for="AlbumId" class="form-control" asp-items="ViewBag.AlbumId"></select>
-                <span asp-validation-for="AlbumId" class="text-danger"></span>
+                <select asp-for="AlbumId" asp-items="@ViewBag.AlbumsList" class="form-control"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -27,6 +26,12 @@
                 <label asp-for="Featuring" class="control-label"></label>
                 <input asp-for="Featuring" class="form-control" />
                 <span asp-validation-for="Featuring" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Price" class="control-label"></label>
+                <input asp-for="Price" class="form-control" />
+                <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
