--- a/COMP2084-MusicStore/Views/Songs/Index.cshtml
+++ b/COMP2084-MusicStore/Views/Songs/Index.cshtml
@@ -33,7 +33,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.SongId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.SongId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.SongId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.SongId">Delete</a> |
+                @Html.ActionLink("Add To Cart", "AddToCart", "ShoppingCart", new { SongId = item.SongId })
             </td>
         </tr>
 }
