--- a/COMP2084-MusicStore/Views/Shared/_Layout.cshtml
+++ b/COMP2084-MusicStore/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     <li><a asp-area="" asp-controller="Genres" asp-action="Index">Genres</a></li>
 
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">Cart (@scs.GetCurrentCart().GetCartItems().Count)</a></li>
+                    <li><a asp-area="" asp-controller="ShoppingCart" asp-action="Index">Cart (@scs.GetCurrentCart().GetTotalCount())</a></li>
 
                     @if (!User.Identity.IsAuthenticated)
                     {
